pagina static terminada faltan formularios edit deleate create

--- a/distridulces prueba/public/pages/header.html
+++ b/distridulces prueba/public/pages/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                     </div>
-                    <a class="login" id="login">
+                    <a class="login" id="btn-login">
                         <div class="txt-iniciar-sesion">Iniciar sesion</div>
                         <div class="para-administradores">Para Administradores</div>
                         <img class="user-img" src="./img/user.png" />
@@ -98,8 +98,6 @@
                     &#215
                 </label>
 
-                <button class="login" id="login">Iniciar sesion</button>
-
                 <div class="info-box-mobile">
                     <div class="info-adress">
                         <div class="frame-61">
@@ -135,20 +133,28 @@
 
     <!-- ventana emergete de inicio de sesion -->
     <div id="modal" class="modal">
-        <div class="modal-contenido">
+        <form class="modal-contenido">
             <span id="cerrar-modal" class="cerrar-modal">&times;</span>
-            <h2>Bienvenido!</h2>
-            <h3>Ingresa tus datos para iniciar sesión en Distridulces</h3>
-            <form>
-                <label for="usuario">Usuario</label>
-                <input type="text" id="usuario" name="usuario" required>
+            <h1>Inicio de sesion</h1>
+            <div class="input-box">
+                <input type="text" placeholder="Usuario" required>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Contraseña" required>
+            </div>
 
-                <label for="contrasena">Contraseña</label>
-                <input type="password" id="contrasena" name="contrasena" required>
+            <div class="remember-forgot">
+                <label><input type="checkbox">Recuerdame</label>
+                <a href="#">¿Olvidaste tu Contraseña?</a>
+            </div>
 
-                <button type="submit">Enviar</button>
-            </form>
-        </div>
+            <button type="submit" class="btn">Iniciar</button>
+
+            <div class="register-link">
+                <p>¿No tienes cuenta? <a href="#">Registrate aqui</a></p>
+
+            </div>
+        </form>
     </div>
 
 
