--- a/distridulces prueba/public/pages/productPage.html
+++ b/distridulces prueba/public/pages/productPage.html
@@ -27,95 +27,85 @@
             </div>
             <div class="mostrador" id="mostrador">
                 <div class="fila">
-
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                    <input type="checkbox" id="checki">
+                    <label for="checki" class="mostrar-detalle-producto">
+                        <div class="item" onclick="cargar(this)">
+                            <div class="contenedor-foto">
+                                <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                            </div>
+                            <div class="contenedor-texto">
+                                <p class="descripcion">Barrilete</p>
+                                <span class="precio">$ 5.300</span>
+                            </div>
                         </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
+                    </label>
+                    <input type="checkbox" id="checki">
+                    <label for="checki" class="mostrar-detalle-producto">
+                        <div class="item" onclick="cargar(this)">
+                            <div class="contenedor-foto">
+                                <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                            </div>
+                            <div class="contenedor-texto">
+                                <p class="descripcion">Barrilete</p>
+                                <span class="precio">$ 5.300</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                    </label>
+                    <input type="checkbox" id="checki">
+                    <label for="checki" class="mostrar-detalle-producto">
+                        <div class="item" onclick="cargar(this)">
+                            <div class="contenedor-foto">
+                                <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                            </div>
+                            <div class="contenedor-texto">
+                                <p class="descripcion">Barrilete</p>
+                                <span class="precio">$ 5.300</span>
+                            </div>
                         </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
+                    </label>
+                    <input type="checkbox" id="checki">
+                    <label for="checki" class="mostrar-detalle-producto">
+                        <div class="item" onclick="cargar(this)">
+                            <div class="contenedor-foto">
+                                <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                            </div>
+                            <div class="contenedor-texto">
+                                <p class="descripcion">Barrilete</p>
+                                <span class="precio">$ 5.300</span>
+                            </div>
                         </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                    </label>
+                    <input type="checkbox" id="checki">
+                    <label for="checki" class="mostrar-detalle-producto">
+                        <div class="item" onclick="cargar(this)">
+                            <div class="contenedor-foto">
+                                <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                            </div>
+                            <div class="contenedor-texto">
+                                <p class="descripcion">Barrilete</p>
+                                <span class="precio">$ 5.300</span>
+                            </div>
                         </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
+                    </label>
+                    <div class="seleccion-mobile">
+                        <div class="info">
+                            <img src="img/1.png" alt="" id="img-mobile">
+                            <h2 id="modelo-mobile">titulo</h2>
+                            <p id="descripcion-mobile">descrtipcion</p>
+            
+                            <span class="precio" id="precio-mobile">$12345</span>
+            
+                            <div class="fila">
+                                <div class="size">
+                                    <label for="">Cantidad</label>
+                                    <input type="number" min="0">
+                                </div>
+                                <button>AGREGAR AL CARRITO</button>
+                            </div>
                         </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" id="fantasma" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" id="fantasma" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" id="fantasma" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" id="fantasma" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+                        <label for="checki" class="esconder-detalle-producto">
+                            &#215
+                        </label>
                     </div>
                 </div>
             </div>
