--- a/public/pages/productPage.html
+++ b/public/pages/productPage.html
@@ -9,143 +9,58 @@
 </head>
 
 <body>
-    <div class="cotenedor-productpage">
-        <section class="contenido" id="contenido">
-            <!-- PRIMERA SECCION -->
-            <div class="category-section">
-                <h2 class="category-title">Seccion 1</h2>
-                <div class="category-buttons">
-                    <label for="categoriaDropdown">Categoria:</label>
-                    <select id="categoriaDropdown">
-                        <option value="seleccionar">Seleccionar</option>
-                    </select>
-                    <label for="filtrarDropdown">Filtrar:</label>
-                    <select id="filtrarDropdown">
-                        <option value="seleccionar">Seleccionar</option>
-                    </select>
-                </div>
+    <section class="contenido" id="contenido">
+        <!-- PRIMERA SECCION -->
+        <div class="category-section">
+            <h2 class="category-title">Seccion 1</h2>
+            <div class="category-buttons">
+                <label for="categoriaDropdown">Categoria:</label>
+                <select id="categoriaDropdown">
+                    <option value="seleccionar">Seleccionar</option>
+                </select>
+                <label for="filtrarDropdown">Filtrar:</label>
+                <select id="filtrarDropdown">
+                    <option value="seleccionar">Seleccionar</option>
+                </select>
             </div>
-            <div class="mostrador" id="mostrador">
-                <div class="fila">
-
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
+        </div>
+        <div class="mostrador" id="mostrador">
+            <div class="fila">
+                <div class="item" onclick="cargar(this)">
+                    <div class="contenedor-foto">
+                        <img src="./img/img-products/seccion1/img-card0.png" alt="">
                     </div>
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" id="fantasma" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" id="fantasma" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" id="fantasma" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-                    </div>
-                    <div class="item" id="fantasma" onclick="cargar(this)">
-                        <div class="contenedor-foto">
-                            <img src="./img/img-products/seccion1/img-card0.png" alt="">
-                        </div>
-                        <div class="contenedor-texto">
-                            <p class="descripcion">Barrilete</p>
-                            <span class="precio">$ 5.300</span>
-                        </div>
-                        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+                    <div class="contenedor-texto">
+                        <p class="descripcion">Barrilete</p>
+                        <span class="precio">$ 5.300</span>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- CONTENEDOR DEL ITEM SELECCIONADO -->
+    <section class="seleccion" id="seleccion">
+        <div class="cerrar" onclick="cerrar()">
+            &#x2715
+        </div>
+        <div class="info">
+            <img src="img/1.png" alt="" id="img">
+            <h2 id="modelo">titulo</h2>
+            <p id="descripcion">descrtipcion</p>
 
+            <span class="precio" id="precio">$12345</span>
 
-        </section>
-        <!-- CONTENEDOR DEL ITEM SELECCIONADO -->
-        <section class="seleccion" id="seleccion">
-            <div class="cerrar" onclick="cerrar()">
-                &#x2715
-            </div>
-            <div class="info">
-                <img src="img/1.png" alt="" id="img">
-                <h2 id="modelo">titulo</h2>
-                <p id="descripcion">descrtipcion</p>
-
-                <span class="precio" id="precio">$12345</span>
-
-                <div class="fila">
-                    <div class="size">
-                        <label for="">Cantidad</label>
-                        <input type="number" min="0">
-                    </div>
-                    <button>AGREGAR AL CARRITO</button>
+            <div class="fila">
+                <div class="size">
+                    <label for="">Cantidad</label>
+                    <input type="number" min="0">
                 </div>
+                <button>AGREGAR AL CARRITO</button>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
-    <script src="../script-productpage.js"></script>
+    <script src="../js/productpage.js"></script>
 </body>
 
 </html>
