--- a/public/pages/productPage.html
+++ b/public/pages/productPage.html
@@ -35,6 +35,42 @@
                         <span class="precio">$ 5.300</span>
                     </div>
                 </div>
+                <div class="item" onclick="cargar(this)">
+                    <div class="contenedor-foto">
+                        <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                    </div>
+                    <div class="contenedor-texto">
+                        <p class="descripcion">Barrilete</p>
+                        <span class="precio">$ 5.300</span>
+                    </div>
+                </div>
+                <div class="item" onclick="cargar(this)">
+                    <div class="contenedor-foto">
+                        <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                    </div>
+                    <div class="contenedor-texto">
+                        <p class="descripcion">Barrilete</p>
+                        <span class="precio">$ 5.300</span>
+                    </div>
+                </div>
+                <div class="item" onclick="cargar(this)">
+                    <div class="contenedor-foto">
+                        <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                    </div>
+                    <div class="contenedor-texto">
+                        <p class="descripcion">Barrilete</p>
+                        <span class="precio">$ 5.300</span>
+                    </div>
+                </div>
+                <div class="item" onclick="cargar(this)">
+                    <div class="contenedor-foto">
+                        <img src="./img/img-products/seccion1/img-card0.png" alt="">
+                    </div>
+                    <div class="contenedor-texto">
+                        <p class="descripcion">Barrilete</p>
+                        <span class="precio">$ 5.300</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
