pagina Iniciar sesion terminada y responsive y product page actualizada

--- a/public/pages/crud.html
+++ b/public/pages/crud.html
@@ -221,7 +221,7 @@
 
     <div class="btn-agg-seccion">
         <a class="agg-buttons">
-            <img src="../img/crud/masverde.png" alt="Icono">
+            <img src="../img/crud/add.png" alt="Icono">
             <span> AGREGAR NUEVA SECCION </span>
         </a>
     </div>
