--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="../pages/iniciarSesion.html" class="login" id="btn-login" onclick="abrirVentanaEmergente()">
+                    <a href="../pages/iniciarSesion.html" target="modal" class="login" id="btn-login" onclick="abrirVentanaEmergente()">
                         <div class="txt-iniciar-sesion">Iniciar sesion</div>
                         <div class="para-administradores">Para Administradores</div>
                         <img class="user-img" src="../img/header/user.png" />
@@ -89,11 +89,10 @@
 
             <nav class="navbar-mobile">
                 <img class="logo-mobile-navbar" src="../img/header/img-logo-mobile.png" />
-                <a href="#">Inicio</a>
-                <a href="#">¿Quienes Somos?</a>
-                <a href="#">Productos</a>
-                <a href="#">Ubicanos</a>
-                <a href="#">Contactanos</a>
+                <a href="../pages/home.html">Inicio</a>
+                <a href="../pages/home.html">¿Quienes Somos?</a>
+                <a href="../pages/productPage.html">Productos</a>
+                <a href="../pages/home.html">Contactanos</a>
                 <a href="../pages/iniciarSesion.html" class="login" id="btn-login" onclick="abrirVentanaEmergente()">
                     <div class="txt-iniciar-sesion">Iniciar sesion</div>
                     <div class="para-administradores">Para Administradores</div>
